syntax = "proto3";

option csharp_namespace = "GrpcService1";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  // Gets a response from Claude
  rpc GetClaudeResponse (ClaudeRequest) returns (ClaudeReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

// The request message for Claude response.
message ClaudeRequest {
  string prompt = 1;
}

// The response message from Claude.
message ClaudeReply {
  string response = 1;
}
